--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "cypress": "^9.7.0",
+    "eslint": "^6.8.0",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
